@@ -1,4 +1,4 @@
-package com.merkury.vulcanus.db;
+package com.merkury.vulcanus.db.services;
 
 import com.merkury.vulcanus.model.dtos.comment.SpotCommentMediaDto;
 import com.merkury.vulcanus.model.embeddable.BorderPoint;
@@ -6,7 +6,9 @@ import com.merkury.vulcanus.model.entities.SpotComment;
 import com.merkury.vulcanus.model.entities.Img;
 import com.merkury.vulcanus.model.entities.PasswordResetToken;
 import com.merkury.vulcanus.model.entities.Spot;
-import com.merkury.vulcanus.model.entities.UserEntity;
+import com.merkury.vulcanus.model.entities.SpotComment;
+import com.merkury.vulcanus.model.entities.SpotCommentPhoto;
+import com.merkury.vulcanus.model.entities.SpotTag;
 import com.merkury.vulcanus.model.entities.Zone;
 import com.merkury.vulcanus.model.entities.*;
 import com.merkury.vulcanus.model.enums.MediaType;
@@ -16,71 +18,35 @@ import com.merkury.vulcanus.utils.PolygonAreaCalculator;
 import com.merkury.vulcanus.utils.PolygonCenterPointCalculator;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.merkury.vulcanus.model.enums.UserRole.ROLE_ADMIN;
-import static com.merkury.vulcanus.model.enums.UserRole.ROLE_USER;
 import static java.util.Arrays.asList;
 
 @Service
 @RequiredArgsConstructor
-public class PopulateDbsService {
-    private final PasswordEncoder passwordEncoder;
-    private final UserEntityRepository userEntityRepository;
-    private final PasswordResetTokenRepository passwordResetTokenRepository;
+public class PopulateMapService {
+
     private final SpotRepository spotRepository;
+    private final UserEntityRepository userEntityRepository;
     private final ZoneRepository zoneRepository;
     private final SpotTagRepository spotTagRepository;
     private final SpotCommentRepository spotCommentRepository;
 
     @Transactional
-    public void initPostgresDb() {
-        UserEntity admin = UserEntity.builder()
-                .email("admin@example.com")
-                .username("admin")
-                .password(passwordEncoder.encode("password"))
-                .userRole(ROLE_ADMIN)
-                .provider(Provider.NONE)
-                .build();
+    public void initMapData() {
 
-        UserEntity user = UserEntity.builder()
-                .email("user@example.com")
-                .username("user")
-                .password(passwordEncoder.encode("password"))
-                .userRole(ROLE_USER)
-                .provider(Provider.NONE)
-                .profilePhoto("https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png")
-                .build();
-
-        for (int i = 0; i < 10; i++) {
-            UserEntity locustUser = UserEntity.builder()
-                    .email("user" + i + "@example.com")
-                    .username("user" + i)
-                    .password(passwordEncoder.encode("password"))
-                    .userRole(ROLE_USER)
-                    .provider(Provider.NONE)
-                    .build();
-
-            userEntityRepository.save(locustUser);
-        }
-
-        userEntityRepository.save(admin);
-        userEntityRepository.save(user);
-
-        var token = PasswordResetToken.builder()
-                .token(UUID.fromString("fff3a3f6-fbd8-4fc5-890c-626343f2f324"))
-                .expirationDate(LocalDateTime.now().plusMinutes(15))
-                .userEmail(user.getEmail())
-                .build();
-
-        passwordResetTokenRepository.save(token);
+        var user = userEntityRepository.findByUsername("user").orElseThrow();
 
         Spot spot1 = Spot.builder()
                 .name("Pomnik konny Jana III Sobieskiego")
@@ -489,19 +455,20 @@ public class PopulateDbsService {
                         .text("Podobało mi się, choć były drobne niedociągnięcia.")
                         .rating(4.5)
                         .spot(spot10)
-                        .publishDate(LocalDateTime.of(2024, 6, 20, 17, 35))
+                        .publishDate(LocalDateTime.of(2024, 6, 19, 17, 35))
                         .author(user)
                         .build()
         ));
 
         for (int i = 0; i < 100; i++) {
-            SpotComment spotComment = SpotComment.builder()
+            var spotComment = SpotComment.builder()
                     .text("Comment" + i + ": Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.")
                     .rating((i + 1.0) % 5.0)
                     .spot(spot1)
                     .publishDate(LocalDateTime.now().minusMonths(1))
                     .author(user)
                     .build();
+
             spotCommentList1.add(spotComment);
             spotCommentList2.add(spotComment);
             spotCommentList3.add(spotComment);
@@ -515,11 +482,11 @@ public class PopulateDbsService {
 
         //TODO:all list of img are to be deleted
         List<Img> gallery1 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/8d00d2e1-203e-4b90-bf0b-893f77f870ee.JPG", "pomnik", "pomnik", 0, 0, user, spot1),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/1299333c-ad54-4a2a-b6dc-4578ed4327dc.jpg", "pomnik", "pomnik", 0, 0, user, spot1),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/299fd24d-2436-4b51-bfdf-cbe728890198.jpg", "pomnik", "pomnik", 0, 0, user, spot1),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/98946961-ccce-4bbc-bd78-38df283297e3.jpg", "pomnik", "pomnik", 0, 0, user, spot1),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f87aa3e3-fbc4-4371-837d-d10a4b6878a1.jpg", "pomnik", "pomnik", 0, 0, user, spot1)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/8d00d2e1-203e-4b90-bf0b-893f77f870ee.JPG", "pomnik", "pomnik", 0, 0,LocalDate.of(2024, 1, 15), user, spot1),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/1299333c-ad54-4a2a-b6dc-4578ed4327dc.jpg", "pomnik", "pomnik", 0, 0,LocalDate.of(2024, 1, 15) ,user, spot1),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/299fd24d-2436-4b51-bfdf-cbe728890198.jpg", "pomnik", "pomnik", 0, 0,LocalDate.of(2024, 1, 15) ,user, spot1),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/98946961-ccce-4bbc-bd78-38df283297e3.jpg", "pomnik", "pomnik", 0, 0, LocalDate.of(2024, 1, 15),user, spot1),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f87aa3e3-fbc4-4371-837d-d10a4b6878a1.jpg", "pomnik", "pomnik", 0, 0, LocalDate.of(2024, 1, 15),user, spot1)
         );
 
         List<SpotMedia> spotMedia1 = Arrays.asList(
@@ -531,16 +498,16 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery2 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/b9744843-8cca-4e65-b677-bc89fbed9deb.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/562487b0-a975-4293-8c0f-aaa605f6cd77.JPG", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/04bfa588-77c3-4e46-bdf8-f6bb677f845d.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/b6d1364b-97d8-4bf1-b279-12664ac274fb.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/be341380-eb45-416e-bf60-0e80fed250bf.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f5e1a392-a768-4f9e-9b30-98f1a01c48ae.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/9eeb8808-6165-4a9d-a864-9f11b5588b69.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/5f1ff331-eb5f-49a9-b57d-0aeed0d42eb7.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f7b1009b-7762-4027-8b49-e789531e7cf4.jpg", "skwer", "skwer", 0, 0, user, spot2),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/32628ec1-ecc2-473a-b41d-14a9ff3e5d3d.jpg", "skwer", "skwer", 0, 0, user, spot2)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/b9744843-8cca-4e65-b677-bc89fbed9deb.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/562487b0-a975-4293-8c0f-aaa605f6cd77.JPG", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15),user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/04bfa588-77c3-4e46-bdf8-f6bb677f845d.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/b6d1364b-97d8-4bf1-b279-12664ac274fb.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/be341380-eb45-416e-bf60-0e80fed250bf.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f5e1a392-a768-4f9e-9b30-98f1a01c48ae.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/9eeb8808-6165-4a9d-a864-9f11b5588b69.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/5f1ff331-eb5f-49a9-b57d-0aeed0d42eb7.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f7b1009b-7762-4027-8b49-e789531e7cf4.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/32628ec1-ecc2-473a-b41d-14a9ff3e5d3d.jpg", "skwer", "skwer", 0, 0,LocalDate.of(2024, 1, 15), user, spot2)
         );
 
         List<SpotMedia> spotMedia2 = Arrays.asList(
@@ -559,9 +526,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery3 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/800413ea-ba4b-4b95-ae79-2bdaea17ce21.jpg", "park wałowy", "park wałowy", 0, 0, user, spot3),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/91739137-cbb4-4e1e-9f61-1b9589b7a1ca.jpg", "park wałowy", "park wałowy", 0, 0, user, spot3),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/41e751cd-7029-43cf-b9b4-bca30fa8ab90.jpg", "park wałowy", "park wałowy", 0, 0, user, spot3)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/800413ea-ba4b-4b95-ae79-2bdaea17ce21.jpg", "park wałowy", "park wałowy", 0, 0, LocalDate.of(2024, 1, 15),user, spot3),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/91739137-cbb4-4e1e-9f61-1b9589b7a1ca.jpg", "park wałowy", "park wałowy", 0, 0,LocalDate.of(2024, 1, 15), user, spot3),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/41e751cd-7029-43cf-b9b4-bca30fa8ab90.jpg", "park wałowy", "park wałowy", 0, 0,LocalDate.of(2024, 1, 15), user, spot3)
         );
 
         List<SpotMedia> spotMedia3 = Arrays.asList(
@@ -571,9 +538,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery4 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/777e20d5-a5cc-4811-97e0-c70d2fbc3b7a.jpg", "park", "park", 0, 0, user, spot4),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/60ac5562-29af-477a-bf86-8cb798c7f51b.jpg", "park", "park", 0, 0, user, spot4),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/d64b7781-b188-4d0a-af33-95268b81d751.JPG", "park", "park", 0, 0, user, spot4)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/777e20d5-a5cc-4811-97e0-c70d2fbc3b7a.jpg", "park", "park", 0, 0,LocalDate.of(2024, 4, 1), user, spot4),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/60ac5562-29af-477a-bf86-8cb798c7f51b.jpg", "park", "park", 0, 0,LocalDate.of(2024, 4, 1), user, spot4),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/d64b7781-b188-4d0a-af33-95268b81d751.JPG", "park", "park", 0, 0, LocalDate.of(2024, 4, 1),user, spot4)
         );
 
         List<SpotMedia> spotMedia4 = Arrays.asList(
@@ -583,9 +550,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery5 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/77342dd9-daab-4e05-8aed-272907d94dc8.jpg", "jar", "jar", 0, 0, user, spot5),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/6f58c6e0-1990-4855-b9ca-6418c5879e31.jpg", "jar", "jar", 0, 0, user, spot5),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/e3b361a5-4b25-41b9-a1b2-0c4d8db70afb.JPG", "jar", "jar", 0, 0, user, spot5)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/77342dd9-daab-4e05-8aed-272907d94dc8.jpg", "jar", "jar", 0, 0,LocalDate.of(2024, 4, 1), user, spot5),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/6f58c6e0-1990-4855-b9ca-6418c5879e31.jpg", "jar", "jar", 0, 0,LocalDate.of(2024, 4, 1), user, spot5),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/e3b361a5-4b25-41b9-a1b2-0c4d8db70afb.JPG", "jar", "jar", 0, 0,LocalDate.of(2024, 4, 1), user, spot5)
         );
 
         List<SpotMedia> spotMedia5 = Arrays.asList(
@@ -595,9 +562,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery6 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/18ff9b26-feef-4a53-b4df-64eba49e0075.jpg", "plac kobzdeja", "plac kobzdeja", 0, 0, user, spot6),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/16a82ce9-d6b4-4740-8b5e-55b27919f486.jpg", "plac kobzdeja", "plac kobzdeja", 0, 0, user, spot6),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/0dbe602d-d362-4335-a5a6-4b79267980df.JPG", "plac kobzdeja", "plac kobzdeja", 0, 0, user, spot6)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/18ff9b26-feef-4a53-b4df-64eba49e0075.jpg", "plac kobzdeja", "plac kobzdeja", 0, 0, LocalDate.of(2024, 4, 1),user, spot6),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/16a82ce9-d6b4-4740-8b5e-55b27919f486.jpg", "plac kobzdeja", "plac kobzdeja", 0, 0, LocalDate.of(2024, 4, 1),user, spot6),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/0dbe602d-d362-4335-a5a6-4b79267980df.JPG", "plac kobzdeja", "plac kobzdeja", 0, 0,LocalDate.of(2024, 4, 1), user, spot6)
         );
 
         List<SpotMedia> spotMedia6 = Arrays.asList(
@@ -607,9 +574,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery7 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/c3915c65-6cc3-466f-bf0d-0b1d7644cb84.jpg", "wrona", "wrona", 0, 0, user, spot7),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f7dd6f39-6a64-4812-8c2c-467546dcab05.jpg", "wrona", "wrona", 0, 0, user, spot7),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/023fe242-49ef-4d6e-b4ad-b43d3ece8188.jpg", "wrona", "wrona", 0, 0, user, spot7)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/c3915c65-6cc3-466f-bf0d-0b1d7644cb84.jpg", "wrona", "wrona", 0, 0, LocalDate.of(2024, 7, 5),user, spot7),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/f7dd6f39-6a64-4812-8c2c-467546dcab05.jpg", "wrona", "wrona", 0, 0, LocalDate.of(2024, 7, 5),user, spot7),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/023fe242-49ef-4d6e-b4ad-b43d3ece8188.jpg", "wrona", "wrona", 0, 0,LocalDate.of(2024, 7, 5), user, spot7)
         );
 
         List<SpotMedia> spotMedia7 = Arrays.asList(
@@ -619,10 +586,10 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery8 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/faa462f9-4582-459e-8de1-6fa8d7df34ed.jpg", "plaża", "plaża", 0, 0, user, spot8),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/c9559f6d-7a03-432b-839b-7d0875db39ff.jpg", "plaża", "plaża", 0, 0, user, spot8),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/dc0ca9b3-fecc-445f-b592-42b9ca13924c.jpg", "plaża", "plaża", 0, 0, user, spot8),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/a60e0d2a-4966-4bd5-a949-990a2babc261.jpg", "plaża", "plaża", 0, 0, user, spot8)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/faa462f9-4582-459e-8de1-6fa8d7df34ed.jpg", "plaża", "plaża", 0, 0,LocalDate.of(2024, 7, 5), user, spot8),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/c9559f6d-7a03-432b-839b-7d0875db39ff.jpg", "plaża", "plaża", 0, 0,LocalDate.of(2024, 7, 5), user, spot8),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/dc0ca9b3-fecc-445f-b592-42b9ca13924c.jpg", "plaża", "plaża", 0, 0,LocalDate.of(2024, 7, 5), user, spot8),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/a60e0d2a-4966-4bd5-a949-990a2babc261.jpg", "plaża", "plaża", 0, 0,LocalDate.of(2024, 7, 5), user, spot8)
         );
 
         List<SpotMedia> spotMedia8 = Arrays.asList(
@@ -633,9 +600,9 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery9 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/dc2a4d50-e450-4a2a-af97-9f96c4ea4e9a.jpg", "orunia", "orunia", 0, 0, user, spot9),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/65b0b74d-9172-4005-a699-eb01b52c3b5f.jpg", "orunia", "orunia", 0, 0, user, spot9),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/84cd9748-2ce4-466d-8ce4-a2adeb341e9c.jpg", "orunia", "orunia", 0, 0, user, spot9)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/dc2a4d50-e450-4a2a-af97-9f96c4ea4e9a.jpg", "orunia", "orunia", 0, 0,LocalDate.of(2024, 7, 5), user, spot9),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/65b0b74d-9172-4005-a699-eb01b52c3b5f.jpg", "orunia", "orunia", 0, 0,LocalDate.of(2024, 7, 5), user, spot9),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/84cd9748-2ce4-466d-8ce4-a2adeb341e9c.jpg", "orunia", "orunia", 0, 0,LocalDate.of(2024, 7, 5), user, spot9)
         );
 
         List<SpotMedia> spotMedia9 = Arrays.asList(
@@ -645,8 +612,8 @@ public class PopulateDbsService {
         );
 
         List<Img> gallery10 = Arrays.asList(
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/5566b23d-a037-4b44-b98e-e4a76fc7cfe0.jpg", "workout", "workout", 0, 0, user, spot10),
-                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/4cc317db-8d8a-4514-9688-bd60a1f74af0.jpg", "workout", "workout", 0, 0, user, spot10)
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/5566b23d-a037-4b44-b98e-e4a76fc7cfe0.jpg", "workout", "workout", 0, 0,LocalDate.of(2024, 10, 10), user, spot10),
+                new Img(null, "https://merkurystorage.blob.core.windows.net/mapa/4cc317db-8d8a-4514-9688-bd60a1f74af0.jpg", "workout", "workout", 0, 0,LocalDate.of(2024, 10, 10), user, spot10)
         );
 
         List<SpotMedia> spotMedia10 = Arrays.asList(
@@ -654,7 +621,7 @@ public class PopulateDbsService {
                 new SpotMedia(null, "https://merkurystorage.blob.core.windows.net/mapa/4cc317db-8d8a-4514-9688-bd60a1f74af0.jpg", "workout", "workout", 0, 0, MediaType.PHOTO, user, spot10)
         );
 
-        List<Spot> spots = new ArrayList<>(List.of(spot1, spot2, spot3, spot4, spot5, spot6, spot7, spot8, spot9, spot10));
+        var spots = new ArrayList<>(List.of(spot1, spot2, spot3, spot4, spot5, spot6, spot7, spot8, spot9, spot10));
         var contours = List.of(contour1, contour2, contour3, contour4, contour5, contour6, contour7, contour8, contour9, contour10);
         List<List<SpotComment>> commentLists = List.of(spotCommentList1, spotCommentList2, spotCommentList3, spotCommentList4, spotCommentList5, spotCommentList6, spotCommentList7, spotCommentList8, spotCommentList9, spotCommentList10);
         List<List<Img>> galleries = List.of(gallery1, gallery2, gallery3, gallery4, gallery5, gallery6, gallery7, gallery8, gallery9, gallery10);
@@ -676,15 +643,18 @@ public class PopulateDbsService {
                 "photography",
                 "grassland"
         ));
+
         List<SpotTag> tagList = new ArrayList<>();
         for (String tagName : tagsNames) {
             var tag = SpotTag.builder()
                     .name(tagName)
                     .spots(new HashSet<>())
                     .build();
-            spotTagRepository.save(tag);
+
             tagList.add(tag);
         }
+
+        spotTagRepository.saveAll(tagList);
 
         for (int i = 0; i < spots.size(); i++) {
             Spot spot = spots.get(i);
@@ -715,9 +685,9 @@ public class PopulateDbsService {
         spot10.getTags().addAll(Set.of(tagList.getFirst(), tagList.get(4), tagList.get(11), tagList.get(12)));
 
         for (Spot spot : spots) {
-            SpotComment firstComment = spot.getSpotComments().get(0);
+            var firstComment = spot.getSpotComments().getFirst();
             //TODO:delete photos
-            List<SpotCommentPhoto> photos = spot.getImages().stream()
+            var photos = spot.getImages().stream()
                     .map(img -> SpotCommentPhoto.builder()
                             .url(img.getUrl())
                             .spotComment(firstComment)
@@ -749,5 +719,4 @@ public class PopulateDbsService {
 
         zoneRepository.save(zone);
     }
-
 }
